# kruemelmann.github.io

./: .editorconfig  .gitignore  404.html  BUILD.bazel  Gemfile  Makefile  README.md  WORKSPACE  WORKSPACE.bazel  _config.yml  about.html  blog.html  devOnMac.sh  feed.xml  go.mod  go.sum  hugo.toml  index.html  package.json  projects.html  publications.html
.github/workflows/: github-pages.yml  hugo.yaml
2021/11/18/: welcome.html
2021/11/19/: jekyll-setup.html  pathfind.vim.html  tmux-iconbar.html
2021/12/25/: nasa-api-setup.html
2021/12/27/: bazel_build_grpc.html
2022/01/05/: gameoflife.html
2022/05/01/: komodo.html
2022/10/23/: terrain.html
2023/04/23/: lorenz-attractor.html
_data/: navigation.yml  projects.yml  sozials.yml  timeline.yml
_includes/: foot.html  head.html  navigation.html  scripts.html  wasm.html
_layouts/: base.html  blog.html  nofooter.html
_posts/: 2021-11-18-welcome.md  2021-11-19-jekyll-setup.md  2021-11-19-pathfind.vim.md  2021-11-19-tmux-iconbar.md  2021-11-25-building-cobra-cli.md  2021-12-19-syncMap.md  2021-12-24-bazel_build_grpc.md  2021-12-25-nasa-api-setup.md  2021-12-27-bazel_build_grpc.md  2022-01-05-gameoflife.md  2022-02-18-circleanimation.md  2022-05-01-komodo.md  2022-05-18-tilt.md  2022-10-23-terrain.md  2023-04-23-lorenz-attractor.md
_sass/: about.scss  blog.scss  canvas.scss  cards.scss  footer.scss  general.scss  kruemelmann-theme.scss  nav.scss
assets/css/: styles.css  styles.css.map  styles.scss
assets/js/: cookie.js  dot.js  filter.js  request.js  routing.js  scrolldown.js  search.js  stars.js  wasm_exec.js
assets/js/posts/2022-01-05-gameoflife/: 2dgame.js  3dgame.js
assets/js/posts/2022-02-18-circle_animation/: main.js
assets/js/posts/2022-10-23-terrain/: general.js  terrain-step1.js  terrain-step2.js
assets/js/posts/2023-04-23-lorenz-attractor/: main.js
assets/wasm/: game.wasm
config/: cypress.json
content/about/: _index.md
content/blog/: _index.md
content/blog/2023-06-11-migrate_to_hugo/: migrate_to_hugo.md
content/blog/2023-11-26-nbody_problem/: nbody_problem.md  sim.html
content/blog/2023-11-30-including_html_in_markdown/: including_html_in_markdown.md
content/projects/: _index.md
content/projects/pathfind.vim/: pathfind.vim.md
content/publications/: _index.md
data/: publications.yaml
e2e/cypress/integration/: sample_spec.js
go/: main.go
go/ball/: ball.go
go/brot/: brot.go  brot_test.go  image.go  image_test.go
projects/: golemdb.html
projects/assets/golemdb/: scripts.js  styles.css
public/blog/2023-11-26-nbody_problem/: sim.html
public/css/: style.css
public/wasm/: Makefile
public/wasm/go/mandel/: main.go  utils.go
scripts/bazel/: BUILD.bazel  WORKSPACE  deps.bzl  jekyll.bzl
src/wasm/go/: BUILD.bazel  go.mod  main.go  utils.go
src/wasm/go/brot/: BUILD.bazel  brot.go  image.go  image_test.go
static/wasm/: go.mod
static/wasm/go/mandel/: brot.go  image.go
themes/kruemelmann/: theme.toml
themes/kruemelmann/layouts/: index.html
themes/kruemelmann/layouts/_default/: list.html  publications.html
themes/kruemelmann/layouts/partials/: footer.html  head.html  header.html  script.html  social.html
themes/kruemelmann/static/css/: style.css
themes/kruemelmann/static/js/: scrollbutton.js
