# Jekyll rule (custom maybe move to an other repo)
load("@kruemelmann_rules_jekyll//jekyll:defs.bzl", "jekyll_build")

filegroup(
    name = "jekyll-srcs",
    srcs = glob(
        ["**/*"],
        exclude = [
            ".git/**",
            ".github/**",
            "bazel-*/**",
            "WORKSPACE",
            "BUILD",
            "e2e/**",
            "scripts/**",
        ],
    ),
)

# correct build instruction and then use out as inputs
jekyll_build(
    name = "site",
    srcs = [":jekyll-srcs"],
)

