load("@bazel_gazelle//:def.bzl", "gazelle")
load("@kruemelmann_rules_jekyll//jekyll:defs.bzl", "jekyll_build")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

# gazelle:prefix github.com/kruemelmann/kruemelmann.github.io
gazelle(name = "gazelle")

filegroup(
    name = "jekyll-srcs",
    srcs = glob(
        ["**/*"],
        exclude = [
            ".git/**",
            ".github/**",
            "bazel-*/**",
            "WORKSPACE",
            "BUILD",
            "e2e/**",
            "scripts/**",
        ],
    ),
)

# correct build instruction and then use out as inputs
jekyll_build(
    name = "site",
    srcs = [":jekyll-srcs"],
)

go_binary(
    name = "wasm",
    embed = ["//src/wasm/go:go_lib"],
    goarch = "wasm",
    goos = "js",
    visibility = ["//visibility:public"],
)
